--- a/myapplication/src/main/res/layout/activity_main.xml
+++ b/myapplication/src/main/res/layout/activity_main.xml
@@ -12,6 +12,6 @@
       android:layout_centerInParent="true"
     android:id="@+id/view"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="400dp"
     />
 </RelativeLayout>
